rainbow six siege up

--- a/public/event/gaming/rainbow_six_siege/index.html
+++ b/public/event/gaming/rainbow_six_siege/index.html
@@ -59,9 +59,9 @@
         <h1 style="text-align: center;"><span class="spMagenta">< Event - Gaming ></span></h1>
         <div class="col-md-4">
           <img src="../../../assets/img/events/gaming/rainbow_six_siege/image.jpg" class="img-responsive pull-center">
-          <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="" href="https://goo.gl/forms/fN9wMdAZVNaC0z7u2" ><span class="spMagenta" >Register_now()</span></a></br></p>
+          <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="" href="https://docs.google.com/forms/d/e/1FAIpQLSflQ7yyxwvWEfElKHdLJfT9Xd5XAKyaZK8J_fZtdnoBKjZ3Bw/viewform?usp=sf_link" ><span class="spMagenta" >Register_now()</span></a></br></p>
           <!-- <button  class="tsbutton">Register Now</button> --><!-- <noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript> -->
-            <!-- <script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script> -->
+          <!-- <script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script> -->
         </div>
         <div class="col-md-7">
           <div class="item" style="height: unset;">
@@ -82,7 +82,7 @@
                 </div>
 
                 <div class="col-md-5">
-                  <p><span class="spMagenta">#Date and timing</span></br>24th February 2018</br>9:00 AM to 4:30 PM</p>
+                  <p><span class="spMagenta">#Date and timing</span></br>8th April 2018</br>10:00 AM to 12:00 PM</p>
                 </div>
 
               </div>
@@ -103,11 +103,11 @@
 
 
                 <div class="col-md-6">
-                  <p style="font-size: 30px;margin-top: 20px;"><a href="https://goo.gl/forms/fN9wMdAZVNaC0z7u2" onclick=""><span class="spMagenta" >Register_now()</span></a></br></p>
+                  <p style="font-size: 30px;margin-top: 20px;"><a href="https://docs.google.com/forms/d/e/1FAIpQLSflQ7yyxwvWEfElKHdLJfT9Xd5XAKyaZK8J_fZtdnoBKjZ3Bw/viewform?usp=sf_link" onclick=""><span class="spMagenta" >Register_now()</span></a></br></p>
                 </div>
 
                 <div class="col-md-6">
-                  <p ><span class="spPurple" >//Contact</span></br>* Vishnu Kaimal - 82815 71259</br>* Kevin Sunil - 98460 59343</br></p>
+                  <p ><span class="spPurple" >//Contact</span></br>* Rahul Suresh - 90740 16228</br>* Vipin George - 95678 80225</br></p>
                 </div>
 
               </div>
